<resources>
    <string name="app_name">容器流转</string>
    <string name="instore">入库</string>
    <string name="outstore">出库</string>
    <string name="inflow">入查</string>
    <string name="outflow">出查</string>
    <string name="app_title">蓝辉容器流转管理系统</string>
    <string name="title_instore">入库管理</string>
    <string name="title_outstore">出库管理</string>
    <string name="title_inflow">入库查询</string>
    <string name="title_outflow">出库查询</string>
    <string name="bottom_navigation_font_size">1sp</string>
    <string name="instore_rkid_text">来源单号:</string>
    <string name="instore_kcdmc_text">库存点:</string>
    <string name="instore_rkly_text">入库来源:</string>
    <string name="instore_wpbm_text">零件号</string>
    <string name="instore_rqxh_text">容器型号</string>
    <string name="instore_ys_text">应收</string>
    <string name="instore_ss_text">实收</string>
    <string name="instore_save_btn">保存</string>
    <string name="keyWord">关键字</string>
    <string name="keyhint">请在此输入</string>
    <string name="come_date">入库日期</string>
    <string name="btn_query">查询</string>
    <string name="out_date">出库日期</string>
    <string name="choose_date">请选择日期</string>
    <string name="start_date">开始日</string>
    <string name="end_date">结束日</string>
    <string name="come_text">入库查询</string>
    <string name="come_single_num">入库单号</string>
    <string name="come_from">来源</string>
    <string name="come_num">容器型号</string>
    <string name="come_count">入库数</string>
    <string name="out_text">出库查询</string>
    <string name="out_single_num">出库单号</string>
    <string name="out_from">目的地</string>
    <string name="out_num">容器型号</string>
    <string name="out_count">出库数</string>
</resources>
