<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--上半部分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#b1ceec">

        <!--关键字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyWord"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/keyword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/in_query_editsharp"
                android:maxLength="20"
                android:singleLine="true" />


        </LinearLayout>

        <!--起止日期-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:layout_marginRight="10dp"
                />

            <EditText
                android:id="@+id/start_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:background="@drawable/in_query_editsharp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/end_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:layout_weight="1"
                android:background="@drawable/in_query_editsharp"/>



        </LinearLayout>

        <!--查询按钮-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_query"
                android:background="@drawable/in_query_button_sharp"
                />
        </LinearLayout>


    </LinearLayout>



    <!--检索结果标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/come_single_num"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/come_from"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/come_num"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/come_count"
            android:gravity="center"/>

    </LinearLayout>



    <!--检索结果-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>



</LinearLayout>