<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorInstoreBackground"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/instore_top_shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"

                        android:gravity="left"
                        android:maxLines="1"
                        android:orientation="vertical"
                        android:singleLine="true"
                        android:text="@string/instore_rkid_text" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.28"
                        android:background="@drawable/spinner_bg_style"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/instore_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:dropDownHorizontalOffset="20dp"
                            android:dropDownVerticalOffset="15dp"
                            android:gravity="center"
                            android:spinnerMode="dialog"
                            android:textColor="#000" />

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="-1dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginBottom="5dp"
                            android:background="#b1ceec"
                            android:src="@drawable/spinner" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:maxLines="1"
                        android:orientation="vertical"
                        android:singleLine="true"
                        android:text="@string/instore_rkly_text" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.28"
                        android:background="@drawable/spinner_bg_style"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/instore_rkly"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColor="#606272"
                            android:singleLine="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:orientation="vertical"
                        android:singleLine="true"
                        android:text="@string/instore_kcdmc_text" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="0.28"
                        android:background="@drawable/spinner_bg_style"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/instore_kcdmc"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColor="#606272"
                            android:singleLine="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instore_wpbm_text"
                android:gravity="center"
                android:layout_weight="0.25"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instore_rqxh_text"
                android:gravity="center_horizontal"
                android:layout_weight="0.25"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instore_ys_text"
                android:gravity="center_horizontal"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instore_ss_text"
                android:gravity="center_horizontal"
                android:layout_weight="0.2"/>
            <Button
                android:id="@+id/instore_save"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:background="@drawable/save1"
                android:layout_weight="0.1"/>

        </LinearLayout>
    </LinearLayout>
    <cn.pfms.liust.pfms.instore.InstoreListView
        android:id="@+id/instore_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#979797"
        android:dividerHeight="0.7dp">
    </cn.pfms.liust.pfms.instore.InstoreListView>

</LinearLayout>




